--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,18 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <com.mapbox.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:mapbox_cameraTargetLat="39.5"
-        app:mapbox_cameraTargetLng="-98.0"
-        app:mapbox_cameraZoom="2.0"
-        app:mapbox_cameraPitch="0.0"
-        app:mapbox_cameraBearing="0.0" />
+        app:mapbox_locationComponentEnabled="true"
+        app:mapbox_locationComponentLocationPuck="location_puck_2_d"
+        app:mapbox_locationComponentLocationPuckLocationPuck2DTopImage="@drawable/mapbox_user_icon_shadow"
+        app:mapbox_locationComponentLocationPuckLocationPuck2DBearingImage="@drawable/ic_launcher_background"
+        app:mapbox_locationComponentLocationPuckLocationPuck2DShadowImage="@drawable/common_google_signin_btn_icon_dark"
+        tools:context=".examples.LocationComponentActivity" />
 
 </FrameLayout>
