--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,8 @@
         <com.mapbox.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="match_parent"
-            android:layout_height="618dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="1dp"
-            android:layout_marginBottom="5dp"
+            android:layout_height="695dp"
+            android:layout_margin="20dp"
             app:mapbox_locationComponentEnabled="true"
             app:mapbox_locationComponentLocationPuck="location_puck_2_d"
             app:mapbox_locationComponentLocationPuckLocationPuck2DBearingImage="@drawable/ic_launcher_background"
@@ -26,16 +23,6 @@
 
         </com.mapbox.maps.MapView>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/mapAddbtn"
-            android:layout_width="88dp"
-            android:layout_height="61dp"
-            android:layout_marginLeft="300dp"
-            android:layout_marginTop="0dp"
-            android:clickable="true"
-            android:contentDescription="@string/MapAddBtn"
-            android:padding="10dp"
-            android:src="@drawable/"/>
 
     </LinearLayout>
 </layout>
